--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -4,42 +4,117 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <!-- GitHub-inspired Light Theme Colors -->
+    <Color x:Key="GitHubLight_Background">#ffffff</Color>
+    <Color x:Key="GitHubLight_Surface">#f6f8fa</Color>
+    <Color x:Key="GitHubLight_Border">#d1d9e0</Color>
+    <Color x:Key="GitHubLight_Text">#24292f</Color>
+    <Color x:Key="GitHubLight_TextPrimary">#24292f</Color>
+    <Color x:Key="GitHubLight_TextSecondary">#656d76</Color>
+    <Color x:Key="GitHubLight_Primary">#0969da</Color>
+    <Color x:Key="GitHubLight_PrimaryHover">#0550ae</Color>
+    <Color x:Key="GitHubLight_Success">#1a7f37</Color>
+    <Color x:Key="GitHubLight_Danger">#d1242f</Color>
+    <Color x:Key="GitHubLight_Warning">#bf8700</Color>
+    <Color x:Key="GitHubLight_Accent">#8250df</Color>
+    <Color x:Key="GitHubLight_ButtonPrimary">#2da44e</Color>
+    <Color x:Key="GitHubLight_ButtonSecondary">#f6f8fa</Color>
+    <Color x:Key="GitHubLight_ButtonText">#ffffff</Color>
+    <Color x:Key="GitHubLight_Terminal">#161b22</Color>
+    <Color x:Key="GitHubLight_TerminalText">#f0f6fc</Color>
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
-    <Color x:Key="PrimaryDarkText">#242424</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="SecondaryDarkText">#9880e5</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <!-- GitHub-inspired Dark Theme Colors -->
+    <Color x:Key="GitHubDark_Background">#0d1117</Color>
+    <Color x:Key="GitHubDark_Surface">#161b22</Color>
+    <Color x:Key="GitHubDark_Border">#30363d</Color>
+    <Color x:Key="GitHubDark_Text">#f0f6fc</Color>
+    <Color x:Key="GitHubDark_TextPrimary">#f0f6fc</Color>
+    <Color x:Key="GitHubDark_TextSecondary">#8b949e</Color>
+    <Color x:Key="GitHubDark_Primary">#58a6ff</Color>
+    <Color x:Key="GitHubDark_PrimaryHover">#409cfe</Color>
+    <Color x:Key="GitHubDark_Success">#3fb950</Color>
+    <Color x:Key="GitHubDark_Danger">#f85149</Color>
+    <Color x:Key="GitHubDark_Warning">#d29922</Color>
+    <Color x:Key="GitHubDark_Accent">#a5a3ff</Color>
+    <Color x:Key="GitHubDark_ButtonPrimary">#238636</Color>
+    <Color x:Key="GitHubDark_ButtonSecondary">#21262d</Color>
+    <Color x:Key="GitHubDark_ButtonText">#f0f6fc</Color>
+    <Color x:Key="GitHubDark_Terminal">#0d1117</Color>
+    <Color x:Key="GitHubDark_TerminalText">#f0f6fc</Color>
 
-    <Color x:Key="White">White</Color>
-    <Color x:Key="Black">Black</Color>
-    <Color x:Key="Magenta">#D600AA</Color>
-    <Color x:Key="MidnightBlue">#190649</Color>
-    <Color x:Key="OffBlack">#1f1f1f</Color>
+    <!-- Brushes with Theme Binding -->
+    <SolidColorBrush x:Key="AppBackgroundBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Background}" Dark="{StaticResource GitHubDark_Background}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppSurfaceBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Surface}" Dark="{StaticResource GitHubDark_Surface}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppBorderBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Border}" Dark="{StaticResource GitHubDark_Border}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppTextBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Text}" Dark="{StaticResource GitHubDark_Text}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppTextSecondaryBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_TextSecondary}" Dark="{StaticResource GitHubDark_TextSecondary}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppPrimaryBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Primary}" Dark="{StaticResource GitHubDark_Primary}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppSuccessBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Success}" Dark="{StaticResource GitHubDark_Success}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppDangerBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Danger}" Dark="{StaticResource GitHubDark_Danger}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
+    <SolidColorBrush x:Key="AppWarningBrush">
+        <SolidColorBrush.Color>
+            <AppThemeBinding Light="{StaticResource GitHubLight_Warning}" Dark="{StaticResource GitHubDark_Warning}"/>
+        </SolidColorBrush.Color>
+    </SolidColorBrush>
 
-    <Color x:Key="Gray100">#E1E1E1</Color>
-    <Color x:Key="Gray200">#C8C8C8</Color>
-    <Color x:Key="Gray300">#ACACAC</Color>
-    <Color x:Key="Gray400">#919191</Color>
-    <Color x:Key="Gray500">#6E6E6E</Color>
-    <Color x:Key="Gray600">#404040</Color>
-    <Color x:Key="Gray900">#212121</Color>
-    <Color x:Key="Gray950">#141414</Color>
+    <!-- Legacy Color Mappings for Backward Compatibility -->
+    
+    <!-- Primary Colors (mapped to GitHub colors) -->
+    <Color x:Key="Primary">#2da44e</Color>
+    <Color x:Key="PrimaryDark">#238636</Color>
+    <Color x:Key="PrimaryDarkText">#ffffff</Color>
+    
+    <!-- Secondary Colors -->
+    <Color x:Key="Secondary">#6e7681</Color>
+    <Color x:Key="SecondaryDarkText">#f0f6fc</Color>
+    
+    <!-- Basic Colors -->
+    <Color x:Key="Tertiary">#8250df</Color>
+    <Color x:Key="White">#ffffff</Color>
+    <Color x:Key="Black">#000000</Color>
+    <Color x:Key="Magenta">#8250df</Color>
+    <Color x:Key="MidnightBlue">#24292f</Color>
+    <Color x:Key="OffBlack">#161b22</Color>
 
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
-
-    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
-    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
-    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
-    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}"/>
-    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}"/>
-    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
-    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
-    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+    <!-- Gray Scale -->
+    <Color x:Key="Gray100">#f6f8fa</Color>
+    <Color x:Key="Gray200">#d1d9e0</Color>
+    <Color x:Key="Gray300">#afb8c1</Color>
+    <Color x:Key="Gray400">#8c959f</Color>
+    <Color x:Key="Gray500">#6e7781</Color>
+    <Color x:Key="Gray600">#656d76</Color>
+    <Color x:Key="Gray900">#24292f</Color>
+    <Color x:Key="Gray950">#1b1f23</Color>
 </ResourceDictionary>
