--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="SSHExplorer.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:SSHExplorer.Views"
+    xmlns:pages="clr-namespace:SSHExplorer.Pages"
     Title="SSHExplorer">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate views:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
