--- a/Pages/OptionsPage.xaml
+++ b/Pages/OptionsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:SSHExplorer.ViewModels"
-             x:Class="SSHExplorer.Views.OptionsPage"
+             x:Class="SSHExplorer.Pages.OptionsPage"
              x:DataType="vm:OptionsViewModel"
              Title="Options"
              BackgroundColor="{StaticResource AppBackgroundBrush}">
